tests/baselines/reference/orderMattersForSignatureGroupIdentity.errors.txt
tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts(19,12): error TS2339: Property 'n' does not exist on type '{ s: string; }'.
tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts(22,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'w' must be of type 'A', but here has type 'C'.
tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts(24,12): error TS2339: Property 'n' does not exist on type '{ s: string; }'.


==== tests/cases/compiler/orderMattersForSignatureGroupIdentity.ts (3 errors) ====
    interface A {
        (x: { s: string }): string
        (x: { n: number }): number
    }
    
    interface B {
        (x: { s: string }): string
        (x: { n: number }): number
    }
    
    interface C {
        (x: { n: number }): number
        (x: { s: string }): string
    }
    
    var v: A;
    var v: B;
    
    v({ s: "", n: 0 }).toLowerCase();
               ~
!!! error TS2339: Property 'n' does not exist on type '{ s: string; }'.
    
    var w: A;
    var w: C;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'w' must be of type 'A', but here has type 'C'.
    
    w({ s: "", n: 0 }).toLowerCase();
               ~
!!! error TS2339: Property 'n' does not exist on type '{ s: string; }'.